Routes of tooth with procedures array
